LPS-36619 - We need to use the namespace for consistency and to prevent possible duplicated IDs, even if this means we need to reference the portlet namespace from the theme. Ideally, we could pass custom css classes to the collapse buttons

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_responsive.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_responsive.css
@@ -193,7 +193,7 @@
 			width: 100%;
 		}
 
-		.signed-out #navAddControlsNavbarBtn {
+		.signed-out #_145_navAddControlsNavbarBtn {
 			display: none;
 		}
 	}
