--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom_responsive.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom_responsive.css
@@ -5,7 +5,7 @@
 	.aui {
 		.dockbar .navbar-inner .container {
 
-			#navAddControlsNavbarBtn, #navNavigationNavbarBtn {
+			#_145_navAddControlsNavbarBtn, #_145_navSiteNavigationNavbarBtn {
 				display: none;
 			}
 
